fix(compile) Minor changes